// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelList Component renders correctly with some items 1`] = `
<div
  className="label-list"
>
  <a
    className="label-list__item "
    href="/test-1"
    onClick={[Function]}
  >
    Test 1
  </a>
  <a
    className="label-list__item "
    href="/test-2"
    onClick={[Function]}
  >
    Test 2
  </a>
</div>
`;

exports[`LabelList Component renders correctly with some other items 1`] = `
<div
  className="label-list"
>
  <a
    className="label-list__item "
    href="/test-1"
    onClick={[Function]}
  >
    Test 1
  </a>
  <a
    className="label-list__item "
    href="/test-2"
    onClick={[Function]}
  >
    Test 2
  </a>
  <a
    className="label-list__item "
    href="/test-3"
    onClick={[Function]}
  >
    Test 3
  </a>
</div>
`;
